crates/gr-cli/src/snapshots/gr_cli__tests__show_capabilities_xbox360.snap
---
source: crates/gr-cli/src/lib.rs
expression: output
---
profile_id: xbox360
display_name: Xbox 360
profile_family: xbox360
identity:
  vendor_id: 1118
  product_id: 654
  version: null
  transport_hints:
  - usb
supported_fidelity:
- compatibility
- identity-aware
- hardware-faithful
input_capabilities:
- category: button
  semantic: face-bottom
  optionality: required
- category: button
  semantic: face-right
  optionality: required
- category: button
  semantic: face-left
  optionality: required
- category: button
  semantic: face-top
  optionality: required
- category: button
  semantic: left-shoulder
  optionality: required
- category: button
  semantic: right-shoulder
  optionality: required
- category: button
  semantic: left-stick-button
  optionality: required
- category: button
  semantic: right-stick-button
  optionality: required
- category: system
  semantic: menu-primary
  optionality: required
- category: system
  semantic: menu-secondary
  optionality: required
- category: system
  semantic: guide
  optionality: required
- category: button
  semantic: dpad
  optionality: required
- category: stick
  semantic: left-stick
  optionality: required
  covered_fields:
  - sticks.left_x
  - sticks.left_y
  range:
    kind: i16
    min: -32768
    max: 32767
  range_applies_to:
  - sticks.left_x
  - sticks.left_y
- category: stick
  semantic: right-stick
  optionality: required
  covered_fields:
  - sticks.right_x
  - sticks.right_y
  range:
    kind: i16
    min: -32768
    max: 32767
  range_applies_to:
  - sticks.right_x
  - sticks.right_y
- category: trigger
  semantic: left-trigger
  optionality: required
  range:
    kind: u16
    min: 0
    max: 65535
- category: trigger
  semantic: right-trigger
  optionality: required
  range:
    kind: u16
    min: 0
    max: 65535
output_capabilities:
- category: haptic
  semantic: rumble
  optionality: required
- category: lighting
  semantic: lighting
  optionality: required
- category: lighting
  semantic: player-indicators
  optionality: required
reverse_command_support:
- rumble
- lighting
- player-indicators
input_contract:
  required_fields:
  - buttons.face.a
  - buttons.face.b
  - buttons.face.x
  - buttons.face.y
  - buttons.shoulders.lb
  - buttons.shoulders.rb
  - buttons.stick_clicks.ls
  - buttons.stick_clicks.rs
  - buttons.system.start
  - buttons.system.back
  - buttons.system.guide
  - dpad.up
  - dpad.down
  - dpad.left
  - dpad.right
  - sticks.left_x
  - sticks.left_y
  - sticks.right_x
  - sticks.right_y
  - triggers.lt
  - triggers.rt
  optional_fields: []
  ranges:
  - field: sticks.left_x
    range:
      kind: i16
      min: -32768
      max: 32767
  - field: sticks.left_y
    range:
      kind: i16
      min: -32768
      max: 32767
  - field: sticks.right_x
    range:
      kind: i16
      min: -32768
      max: 32767
  - field: sticks.right_y
    range:
      kind: i16
      min: -32768
      max: 32767
  - field: triggers.lt
    range:
      kind: u16
      min: 0
      max: 65535
  - field: triggers.rt
    range:
      kind: u16
      min: 0
      max: 65535
  delta_support: sparse-partial
descriptor_templates:
- fidelity: compatibility
  descriptor_len: 188
- fidelity: identity-aware
  descriptor_len: 188
- fidelity: hardware-faithful
  descriptor_len: 188
